# zompiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile-commands.json
.github/workflows/: CI.yml  check-format.yml
cmake/: common.cmake  functions.cmake  options.cmake
cmake/utils/: common.cmake  coverage.cmake  functions.cmake  options.cmake  unittests.cmake
docs/: Lexer.md  OVERVIEW.md  Request Syetem.md  ZIS.md
docs/design/: ADT.md  Lexer.md  Request Syetem.md
examples/bnf_set_calculator/: arithmetic.bnf  ebnf.bnf  ebnf.ebnf
examples/zc/: CMakeLists.txt
examples/zc/parse/: parse-example-non-zc.cc  parse-example.cc  parse_example.cc  parse_example_non_zc.cc
include/: APIDesign.md
libraries/: CMakeLists.txt
libraries/zc/: CMakeLists.txt  README.md
libraries/zc/async/: async-inl.h  async-io-internal.h  (+14 more)
libraries/zc/unittests/: CMakeLists.txt
libraries/zc/unittests/async/: async-coroutine-test.cc  async-io-test.cc  async-test.cc  async-unix-test.cc  async-win32-xthread-test.cc  async-xthread-test.cc
libraries/zc/unittests/core/: array-test.cc  encoding-test.cc  exception-test.cc  filesystem-disk-generic-test.cc  filesystem-disk-old-kernel-test.cc  filesystem-test.cc  function-test.cc  glob-filter-test.cc  io-test.cc  iostream-test.cc  map-test.cc  string-test.cc  table-test.cc  units-test.cc
libraries/zc/unittests/http/: http-socketpair-test.cc  http-test.cc  url-test.cc
libraries/zc/unittests/tls/: readiness-io-test.cc
products/: CMakeLists.txt
products/zomcore/: README.md
products/zomcrate/: README.md
products/zomlang/: CMakeLists.txt
products/zomlang/unittests/compiler/: CMakeLists.txt
products/zomlang/unittests/compiler/source/: manager-test.cc
scripts/: check-format.py  check_format.py  check_includes.py
src/: CMakeLists.txt
src/bnf_calculator/: CMakeLists.txt  calculator.cc  calculator.h  grammar.cc  grammar.h  lexer.cc  lexer.h  parser.cc  parser.h
src/compiler/: CMakeLists.txt  pipeline.cc  pipeline.h  stage.h
src/concurrency/: CMakeLists.txt  dependency_graph.cc  dependency_graph.h  task.cc  task.h  task_scheduler.cc  task_scheduler.h  thread_pool.cc  thread_pool.h
src/diagnostics/: CMakeLists.txt  consumer.cc  consumer.h  diagnostic.cc  diagnostic.h  engine.cc  engine.h
src/zc/: CMakeLists.txt  README.md
src/zc/async/: async-inl.h  async-io-internal.h  async-io-unix.cc  async-io-win32.cc  async-io.cc  async-io.h  async-prelude.h  async-queue.h  async-unix.cc  async-unix.h  async-win32.cc  async-win32.h  async.cc  async.h  timer.cc  timer.h
src/zc/base/: common.cc  common.h  debug.cc  debug.h  exception.cc  exception.h  function.h  hints.h  io.cc  io.h  main.cc  main.h  miniposix.h  windows-sanity.h  windows_sanity.h
src/zc/concurrent/: async-prelude.h  async.cc  async.h  async_inl.h  async_prelude.h  mutex.cc  mutex.h  thread.cc  thread.h
src/zc/containers/: array.cc  array.h  list.cc  list.h  map.h  table.cc  table.h  tuple.h  vector.h
src/zc/core/: arena.cc  arena.h  array.cc  array.h  cidr.cc  cidr.h  common.cc  debug.cc  debug.h  encoding.cc  encoding.h  exception.cc  exception.h  filesystem-disk-unix.cc  filesystem-disk-win32.cc  filesystem.cc  filesystem.h  function.h  glob-filter.cc  glob-filter.h  hash.cc  hash.h  io.cc  io.h  iostream.h  list.cc  list.h  main.cc  main.h  map.h  memory.cc  memory.h  miniposix.h  mutex.cc  mutex.h  one-of.h  refcount.cc  refcount.h  source-location.cc  source-location.h  (+15 more)
src/zc/http/: http.cc  http.h  url.cc  url.h
src/zc/memory/: arena.cc  arena.h  memory.cc  memory.h
src/zc/parse/: char.cc  char.h  common.h
src/zc/strings/: string.cc  string.h
src/zc/tls/: readiness-io.cc  readiness-io.h  tls.cc  tls.h
src/zc/utility/: glob-filter.cc  glob-filter.h  glob_filter.cc  glob_filter.h  hash.cc  hash.h  one-of.h  one_of.h  refcount.cc  refcount.h  source-location.cc  source-location.h  source_location.cc  source_location.h  time.cc  time.h  units.cc  units.h
src/zc/zip/: brotli.cc  brotli.h  gzip.cc  gzip.h
src/zc/ztest/: gtest.h  test-helpers.cc  test.cc  test.h  ztest.cc  ztest.h
src/zom/: CMakeLists.txt  pipeline.cc  pipeline.h  stage.h
src/zom/basic/: CMakeLists.txt  lang-options.h  lang_options.h  pipeline.cc  pipeline.h  stage.h
src/zom/diagnostics/: CMakeLists.txt  diagnostic-engine.h  diagnostic-state.cc  diagnostic-state.h  diagnostic.cc  diagnostic.h  diagnostic_engine.h  diagnostic_state.cc  diagnostic_state.h  in-flight-diagnostic.h  in_flight_diagnostic.h
src/zom/lexer/: lexer.cc  lexer.h  token.h
src/zom/parser/: CMakeLists.txt  parser.cc  parser.h
src/zom/source/: CMakeLists.txt  location.cc  location.h  manager.cc  manager.h
src/zom/typecheck/: symbol-table.h  symbol_table.h  typechecker.cc  typechecker.h
src/zom/zis/: zis.h
src/zom/zomc/: CMakeLists.txt  zomc.cc
tests/: CMakeLists.txt
tests/bnf_calculator/: CMakeLists.txt
tests/unit/zc/: CMakeLists.txt
tests/unit/zc/async/: async-coroutine-test.cc  async-io-test.cc  async-queue-test.cc  async-test.cc  async-unix-test.cc  async-unix-xthread-test.cc  async-win32-test.cc  async-win32-xthread-test.cc  async-xthread-test.cc
tests/unit/zc/base/: common_test.cc
tests/unit/zc/core/: arena-test.cc  array-test.cc  common-test.cc  debug-test.cc  encoding-test.cc  exception-override-symbolizer-test.cc  exception-test.cc  filesystem-disk-generic-test.cc  filesystem-disk-old-kernel-test.cc  filesystem-disk-test.cc  filesystem-test.cc  function-test.cc  glob-filter-test.cc  io-test.cc  iostream-test.cc  list-test.cc  map-test.cc  memory-test.cc  mutex-test.cc  one-of-test.cc  refcount-test.cc  string-test.cc  string-tree-test.cc  table-test.cc  thread-test.cc  time-test.cc  tuple-test.cc  units-test.cc
tests/unit/zc/http/: http-socketpair-test.cc  http-test.cc  url-test.cc
tests/unit/zc/parse/: char-test.cc  char_test.cc  common-test.cc  common_test.cc
tests/unit/zc/tls/: readiness-io-test.cc  tls-test.cc  tls-win32-test.cc
tests/unit/zc/zip/: brotli-test.cc  gzip-test.cc
tests/unit/zc/ztest/: test-test.cc
tools/cli/: CMakeLists.txt
(+171 files in other folders)
